--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -1,19 +1,13 @@
 <md-grid-list cols="10" *ngIf="articlesList && articlesList.length > 2" class="header-grid">
-  <md-grid-tile class="header" 
-                *ngFor="let article of articlesList | slice:0:3; let i = index" 
-                [colspan]="i == 0 ? 4 : 3"
-                [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.85)), url(' + article.headerImagePath + ')'}"
-                [rowspan]=1
-                [routerLink]="[article.idArticle]">
-                
+  <md-grid-tile class="header" *ngFor="let article of articlesList | slice:0:3; let i = index" [colspan]="i == 0 ? 4 : 3" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.85)), url(' + article.headerImagePath + ')'}"
+    [rowspan]=1 [routerLink]="[article.idArticle]">
     <div class="content">
       <h3>{{article.articleHeaderTitle}}</h3>
-      <p class="description" *ngIf="i == 0" >{{article.articleHeaderDescription}}</p>
+      <p class="description" *ngIf="i == 0">{{article.articleHeaderDescription}}</p>
       <p>by <b>{{article.author}}</b></p>
     </div>
   </md-grid-tile>
 </md-grid-list>
-
 <div class="container articles-container" *ngIf="articlesList && articlesList.length > 0">
   <div class="row">
     <div class="heading-line col-md-12 col-sm-12">
@@ -21,24 +15,30 @@
       <div class="line"></div>
     </div>
   </div>
+  <!-- Thing to fix ...-->
   <div class="row">
     <div class="col-md-4 col-sm-6" *ngFor="let article of articlesList | slice:1">
       <md-card>
         <img md-card-image src={{article.headerImagePath}} class="articles-img">
         <md-card-content>
-          <h4 class="article-title">{{article.articleHeaderTitle}}</h4>
+          <div class="article-title-container">
+            <h4 class="article-title">{{article.articleHeaderTitle}}</h4>
+          </div>
+          <div class="article-description-container">
           <p class="article-description">
             {{article.articleHeaderDescription}}
           </p>
+          </div>
         </md-card-content>
         <md-card-actions>
-          <button md-button color="primary" [routerLink]="['/news',categoryName | lowercase, article.idArticle]"  >
+          <button md-button color="primary" [routerLink]="['/news',categoryName | lowercase, article.idArticle]">
             LEARN MORE</button>
         </md-card-actions>
       </md-card>
       <div class="clearfix visible-sm-block"></div>
     </div>
   </div>
+  <!-- End here-->
 </div>
 <div class="container-notfound" *ngIf="!articlesList || articlesList.length == 0">
   <div class="wrapper">
@@ -48,4 +48,3 @@
     <p class="notfound-text"> 💔 💔 💔 </p>
   </div>
 </div>
-
