--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -7,11 +7,11 @@
           <h3 class="description">{{article.articleHeaderDescription}}</h3>
         </div>
       </div>
-        <div class="author">
-          <p>by <b>{{article.author}}</b></p>
-        </div>
+      <div class="author">
+        <p>by <b>{{article.author}}</b></p>
+      </div>
     </div>
-  </header>    
+  </header>
   <div class="row article-content-row">
     <div class="col-md-2 col-sm-2 col-xs-12">
       <p><b>Publish by:</b></p>
@@ -22,21 +22,16 @@
         <h6>{{article.author}}</h6>
         <h6>{{article.date | date:'medium'}}</h6>
       </div>
-      
     </div>
     <div class="col-md-7 col-sm-7 col-xs-12 article-body">
-      <div [innerHTML] = "article.articleContent" class="text-body"></div>
+      <div [innerHTML]="article.articleContent" class="text-body"></div>
     </div>
     <div class="col-md-3 col-sm-3 col-xs-12 related-articles">
       <p><b>Related Stories</b></p>
-      <div *ngIf="relatedArticleList" >
-        <div class="row related-article-row" 
-            *ngFor="let relatedArticle of relatedArticleList | slice:0:4; let i = index" 
-            [hidden]="relatedArticleList[i].idArticle == article.idArticle"
-            style="margin-bottom: 20px"
-            [routerLink]="[ '/', categoryName, relatedArticle.idArticle]"
-            >
-          <div class="col-md-4 col-sm-4" >
+      <div *ngIf="relatedArticleList">
+        <div class="row related-article-row" *ngFor="let relatedArticle of relatedArticleList | slice:0:4; let i = index" [hidden]="relatedArticleList[i].idArticle == article.idArticle"
+          style="margin-bottom: 20px" [routerLink]="[ '/', categoryName, relatedArticle.idArticle]">
+          <div class="col-md-4 col-sm-4">
             <img [src]="relatedArticle.headerImagePath" alt="img" style="width: 80px; height: 80px">
           </div>
           <div class="col-md-8 col-sm-8">
@@ -47,7 +42,6 @@
       </div>
     </div>
   </div>
-
   <div class="row">
     <div class="comment-line col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2">
       <h4>Share to your friend</h4>
@@ -64,11 +58,23 @@
       <h4>Comments</h4>
       <div class="line"></div>
     </div>
-  </div>
-  <!--<div>
-    <div *ngFor="let comment of article.comments">
-      <p>{{comment.content}}</p>
+    <div class="col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2" *ngIf="commentList">
+      <!-- List of comment -->
+      <md-list>
+        <div *ngFor="let comment of commentList">
+          <md-list-item>
+            <img md-list-avatar src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png" alt="user-avatar">
+            <h2 md-line> {{comment.firstName + ' ' + comment.lastName}} </h2>
+            <p md-line>
+              {{getCommentPeriod(comment.time)}}
+            </p>
+          </md-list-item>
+          <div class="comment-content">
+            <p>{{comment.content}}</p>
+          </div>
+          <hr class="comment-divider">
+        </div>
+      </md-list>
     </div>
-  </div>-->
+  </div>
 </div>
-<!--<div id="fb-root"></div>-->
