--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -17,7 +17,7 @@
   </div>
   <!-- Thing to fix ...-->
   <div class="row">
-    <div class="col-md-4 col-sm-6" *ngFor="let article of articlesList | slice:1">
+    <div class="col-md-4 col-sm-6" *ngFor="let article of articlesList | slice:1" [routerLink]="[article.idArticle]">
       <md-card>
         <img md-card-image src={{article.headerImagePath}} class="articles-img">
         <md-card-content>
