--- a/frontEnd/src/app/pizza-dialog/pizza-dialog.component.html
+++ b/frontEnd/src/app/pizza-dialog/pizza-dialog.component.html
@@ -16,7 +16,7 @@
       </md-input-container>
 
       <md-input-container style="width: 100%">
-        <textarea md-input maxlength="100" placeholder="Desciption" 
+        <textarea md-input maxlength="200" placeholder="Desciption" 
                   required
                   [(ngModel)]="articleDetail.articleHeaderDescription"         
                   id="description"
@@ -27,51 +27,56 @@
         <md-hint align="end">{{description.value.length}} / 200</md-hint>
       </md-input-container>
 
-      <table style="width: 100%" cellspacing="0">
-        <tr>
-          <td>
-              <div style="width: 100%">
-                <select name="category" 
-                        id="category"
-                        [(ngModel)]="articleDetail.Category"
-                        required
-                        md-input
-                        style="width: 80%">
-                    <option *ngFor="let category of categories; let i = index;" 
-                            [value]="category.idCategory">
-                      {{category.categoryName}}
-                    </option>
-                </select>
-            </div>
-          </td>
-          <td>
-            <md-input-container style="width: 100%">
-              <input md-input placeholder="Author" required
-                  [(ngModel)]="articleDetail.author"         
-                  id="author"
-                  name="author"
-                  >
-            </md-input-container>
-          </td>
-        </tr>
-      </table>
-      
       <md-input-container style="width: 100%">
-        <input md-input 
-               id="imageUrl"
-               required
-               [(ngModel)]="articleDetail.headerImagePath" 
-               name="headerImagePath"
-               placeholder="Image URL" 
-               >
+        <input md-input placeholder="Author" required
+            [(ngModel)]="articleDetail.author"         
+            id="author"
+            name="author"
+            >
       </md-input-container>
-      <input   type="image"
-               id="image"
-               [(ngModel)]="articleDetail.headerImagePath" 
-               name="headerImage"
-               placeholder="Image" 
-               [src]="articleDetail.headerImagePath"
-               >
+
+      <div class="row">
+        <div class="col-md-8 col-sm-8">
+          <md-input-container style="width: 100%">
+                  <input md-input 
+                        id="imageUrl"
+                        required
+                        [(ngModel)]="articleDetail.headerImagePath" 
+                        name="headerImagePath"
+                        placeholder="Image URL" 
+                        >
+          </md-input-container>
+          
+          <div style="width: 100%; margin-bottom: 10px">
+            <select name="category" 
+                    id="category"
+                    [(ngModel)]="articleDetail.Category"
+                    required
+                    md-input
+                    style="width: 80%">
+                <option *ngFor="let category of categories; let i = index;" 
+                        [value]="category.idCategory">
+                  {{category.categoryName}}
+                </option>
+            </select>
+          </div>
+          <div style="margin-bottom: 20px">
+            <md-checkbox [(ngModel)]="articleDetail.published" name="published">
+              Publish
+            </md-checkbox>
+          </div>
+        </div>
+        
+        <div class="col-md-4 col-sm-4">
+          <img    id="image"
+                  name="headerImage"
+                  style="width: 100%; height: 100%;"
+                  [src]="articleDetail.headerImagePath == null || articleDetail.headerImagePath == '' ? 'http://www.doitacaav.vn/bitrix/components/vportal/news.list/templates/tinmoinhat/images/no_images.png' : articleDetail.headerImagePath"
+          />
+        </div>
+      </div>
+      
+      
       <ckeditor
           required
           name="articleContent"
@@ -84,6 +89,6 @@
   <md-dialog-actions>
     <button type="button" style="float: right" md-button md-dialog-close (click)="dialogRef.close('yes')">Cancel</button>  
     <button type="button" style="float: right" md-button md-dialog-close (click)="onRemove(articleDetail.idArticle);dialogRef.close('yes')">Remove</button>  
-    <button type="submit" style="float: right" md-button>Modify</button>
+    <button type="submit" style="float: right" md-button>Submit</button>
   </md-dialog-actions>
 </form>
