fix image responsive

--- a/frontEnd/src/app/article-detail/article-detail.component.scss
+++ b/frontEnd/src/app/article-detail/article-detail.component.scss
@@ -29,7 +29,8 @@
     margin: auto;
     margin-top: 80px;
     .article-body {
-      display: table;
+      // display: table;
+      overflow: hidden;
       .text-body {
         img {
           width: 100% !important;
