--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -58,6 +58,31 @@
       <h4>Comments</h4>
       <div class="line"></div>
     </div>
+    <!-- User comment box -->
+    <div class="col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2" *ngIf="authService.authenticated()">
+      <md-list>
+        <md-list-item>
+          <img md-list-avatar src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png" alt="user-avatar">
+          <md-input-container style=" width: 100%; padding-left: 16px;">
+            <textarea md-input placeholder="Leave a comment as {{user.firstName}} {{user.lastName}}" maxlength="300" #characterCountComment
+              rows="3" [(ngModel)]="commentContent"></textarea>
+            <md-hint align="end">{{characterCountComment.value.length}} / 300</md-hint>
+          </md-input-container>
+          <div style="margin-left: 3px;" [hidden] = "submittingComment">
+          <button md-icon-button (click)="comment()"  >
+          <md-icon color="primary"> send </md-icon>
+            </button>
+          </div>
+            <!-- Comment submit spinner -->
+          <div id="circleG" *ngIf="submittingComment">
+            <div id="circleG_1" class="circleG"></div>
+            <div id="circleG_2" class="circleG"></div>
+            <div id="circleG_3" class="circleG"></div>
+          </div>
+        </md-list-item>
+      </md-list>
+    </div>
+    <!-- End of user comment box -->
     <div class="col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2" *ngIf="commentList">
       <!-- List of comment -->
       <md-list>
