--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -1,5 +1,5 @@
-<md-grid-list cols="10" *ngIf="articlesList && articlesList.length > 2" class="header-grid">
-  <md-grid-tile class="header" *ngFor="let article of articlesList | slice:0:3; let i = index" [colspan]="i == 0 ? 4 : 3" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.85)), url(' + article.headerImagePath + ')'}"
+<md-grid-list cols="10" *ngIf="publishedArticles && publishedArticles.length > 2" class="header-grid">
+  <md-grid-tile class="header" *ngFor="let article of publishedArticles.reverse() | slice:0:3; let i = index" [colspan]="i == 0 ? 4 : 3" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.85)), url(' + article.headerImagePath + ')'}"
     [rowspan]=1 [routerLink]="[article.idArticle]">
     <div class="content">
       <h3>{{article.articleHeaderTitle}}</h3>
@@ -8,7 +8,7 @@
     </div>
   </md-grid-tile>
 </md-grid-list>
-<div class="container articles-container" *ngIf="articlesList && articlesList.length > 0">
+<div class="container articles-container" *ngIf="publishedArticles && publishedArticles.length > 0">
   <div class="row">
     <div class="heading-line col-md-12 col-sm-12">
       <h4>top <b>stories</b></h4>
@@ -17,7 +17,7 @@
   </div>
   <!-- Thing to fix ...-->
   <div class="row">
-    <div class="col-md-4 col-sm-6" *ngFor="let article of articlesList | slice:3" [routerLink]="[article.idArticle]">
+    <div class="col-md-4 col-sm-6" *ngFor="let article of publishedArticles | slice:3" [routerLink]="[article.idArticle]">
       <md-card>
         <img md-card-image src={{article.headerImagePath}} class="articles-img">
         <md-card-content>
@@ -40,7 +40,7 @@
   </div>
   <!-- End here-->
 </div>
-<div class="container-notfound" *ngIf="!articlesList || articlesList.length == 0">
+<div class="container-notfound" *ngIf="!publishedArticles || publishedArticles.length == 0">
   <div class="wrapper">
     <img class="notfound-img" src="assets/images/not-found.png" />
     <p class="notfound-text">Opps! There is no article yet.</p>
