--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -64,16 +64,16 @@
         <md-list-item>
           <img md-list-avatar src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png" alt="user-avatar">
           <md-input-container style=" width: 100%; padding-left: 16px;">
-            <textarea md-input placeholder="Leave a comment as {{user.firstName}} {{user.lastName}}" maxlength="300" #characterCountComment
+            <textarea md-input placeholder="Leave a comment as {{user.firstName}} {{user.lastName}}" maxlength="300" required #characterCountComment
               rows="3" [(ngModel)]="commentContent"></textarea>
             <md-hint align="end">{{characterCountComment.value.length}} / 300</md-hint>
           </md-input-container>
-          <div style="margin-left: 3px;" [hidden] = "submittingComment">
-          <button md-icon-button (click)="comment()"  >
+          <div style="margin-left: 3px;" [hidden]="submittingComment">
+            <button md-icon-button (click)="comment()">
           <md-icon color="primary"> send </md-icon>
             </button>
           </div>
-            <!-- Comment submit spinner -->
+          <!-- Comment submit spinner -->
           <div id="circleG" *ngIf="submittingComment">
             <div id="circleG_1" class="circleG"></div>
             <div id="circleG_2" class="circleG"></div>
@@ -92,8 +92,15 @@
             <h2 md-line> {{comment.firstName + ' ' + comment.lastName}} </h2>
             <p md-line>
               {{getCommentPeriod(comment.time)}}
+                <span class="pull-right" *ngIf="comment.idUser == user.idUser"><button md-icon-button [md-menu-trigger-for]="menu">
+                 <md-icon>more_vert</md-icon>
+          </button></span>
             </p>
           </md-list-item>
+          <md-menu #menu="mdMenu">
+            <button md-menu-item (click)="modifyComment($event, comment); closeCommentMenu()"> Modify... </button>
+            <button md-menu-item (click)="removeComment($event, comment); closeCommentMenu()"> Remove... </button>
+          </md-menu>
           <div class="comment-content">
             <p>{{comment.content}}</p>
           </div>
