--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -1,5 +1,5 @@
 <md-grid-list cols="10" *ngIf="publishedArticles && publishedArticles.length > 2" class="header-grid">
-  <md-grid-tile class="header" *ngFor="let article of publishedArticles.reverse() | slice:0:3; let i = index" [colspan]="i == 0 ? 4 : 3" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.85)), url(' + article.headerImagePath + ')'}"
+  <md-grid-tile class="header" *ngFor="let article of publishedArticles | slice:0:3; let i = index" [colspan]="i == 0 ? 4 : 3" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.85)), url(' + article.headerImagePath + ')'}"
     [rowspan]=1 [routerLink]="[article.idArticle]">
     <div class="content">
       <h3>{{article.articleHeaderTitle}}</h3>
