--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -1,3 +1,4 @@
+<app-slide-2></app-slide-2>
 <md-grid-list cols="10" *ngIf="publishedArticles && publishedArticles.length > 2" class="header-grid">
   <md-grid-tile class="header" *ngFor="let article of publishedArticles | slice:0:3; let i = index" [colspan]="i == 0 ? 4 : 3" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.85)), url(' + article.headerImagePath + ')'}"
     [rowspan]=1 [routerLink]="[article.idArticle]">
@@ -9,6 +10,9 @@
   </md-grid-tile>
 </md-grid-list>
 <div class="container articles-container" *ngIf="publishedArticles && publishedArticles.length > 0">
+  <div class="row">
+
+  </div>
   <div class="row">
     <div class="heading-line col-md-12 col-sm-12">
       <h4>top <b>stories</b></h4>
