--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -30,7 +30,7 @@
       <p><b>Related Stories</b></p>
       <div *ngIf="relatedArticleList">
         <div class="row related-article-row" *ngFor="let relatedArticle of relatedArticleList | slice:0:4; let i = index" [hidden]="relatedArticleList[i].idArticle == article.idArticle"
-          style="margin-bottom: 20px" [routerLink]="[ '/', categoryName, relatedArticle.idArticle]">
+          style="margin-bottom: 20px" [routerLink]="[ '/news/', categoryName, relatedArticle.idArticle]">
           <div class="col-md-4 col-sm-12">
             <img [src]="relatedArticle.headerImagePath" alt="img" style="width: 80px; height: 80px">
           </div>
