admin detail page for adding button with diff media size

--- a/frontEnd/src/app/articles-list/articles-list.component.scss
+++ b/frontEnd/src/app/articles-list/articles-list.component.scss
@@ -6,3 +6,18 @@
     background-color: md-color($primary)
   }
 }
+
+@media screen and (min-width: 801px) {
+ footer {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  footer {
+    display: block;
+  }
+  .btn-add-big-size {
+    display: none;
+  }
+}
