--- a/frontEnd/src/app/users-list/users-list.component.scss
+++ b/frontEnd/src/app/users-list/users-list.component.scss
@@ -5,4 +5,22 @@
   .ui-button {
     background-color: md-color($primary)
   }
+  // .btn-add-big-size {
+  //   display: block;
+  // }
+}
+
+@media screen and (min-width: 801px) {
+ footer {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  footer {
+    display: block;
+  }
+  .btn-add-big-size {
+    display: none;
+  }
 }
