--- a/frontEnd/src/app/articles-list/articles-list.component.html
+++ b/frontEnd/src/app/articles-list/articles-list.component.html
@@ -8,8 +8,8 @@
           style="margin-bottom:10px" label="Mobile" 
           icon="fa-mobile" *ngIf="stacked">
   </button>
-  <input #gb type="text" placeholder="Global search" pInputText>
-  <button type="button" pButton icon="fa-plus" style="float:right" (click)="openDialog()" label="Add">
+  <input #gb type="text" placeholder="Global search" pInputText style="margin-bottom:10px">
+  <button class="btn-add-big-size" type="button" pButton icon="fa-plus" style="float:right" (click)="openDialog()" label="Add">
   </button>
   <p-dataTable  [value]="articlesList" 
               [rows]="4" 
