toggle admin sidenav and disable lock adminself

--- a/frontEnd/src/app/admin/admin.component.scss
+++ b/frontEnd/src/app/admin/admin.component.scss
@@ -29,3 +29,9 @@ html, body, material-app, md-sidenav-container, .admin-content {
     }
   }
 }
+
+// @media screen and (max-width: 800px) {
+//   .admin-sidenav {
+//     display: none;
+//   }
+// }
