--- a/frontEnd/src/app/admin/admin.component.html
+++ b/frontEnd/src/app/admin/admin.component.html
@@ -1,5 +1,5 @@
 <md-sidenav-container fullscreen class="admin-container">
-  <md-sidenav mode="side" opened="true" class="admin-sidenav">
+  <md-sidenav mode="side" opened="true" #start class="admin-sidenav">
     <md-toolbar color="primary">
       <!--<button md-icon-button (click)="start.toggle()" class="menu-btn">
         <md-icon class="md-24">menu</md-icon>
@@ -8,12 +8,12 @@
       <span class="remaining-space"></span>
     </md-toolbar>
     <md-card class="user-card">
-      <md-card-header *ngIf="checkProfile()" >
+      <md-card-header *ngIf="auth.userProfile">
         <img md-card-avatar [src]="auth.userProfile.picture">
         <md-card-title class="username-text">{{auth.userProfile.firstName}} {{auth.userProfile.lastName}}</md-card-title>
         <md-card-subtitle class="email-text">{{auth.userProfile.email}}</md-card-subtitle>
       </md-card-header>
-      <md-card-header *ngIf="!checkProfile()" >
+      <md-card-header *ngIf="!auth.userProfile">
         <img md-card-avatar src="assets/images/logo.png">
         <md-card-title class="username-text">anonymous</md-card-title>
         <md-card-subtitle class="email-text">anonymous@gmail.com</md-card-subtitle>
@@ -59,9 +59,10 @@
   </md-sidenav>
   <div class="admin-content">
     <md-toolbar color="primary">
-      <!--<button md-icon-button (click)="start.toggle()" class="menu-btn">
-        <md-icon class="md-24">menu</md-icon>
-      </button>-->
+      <button md-icon-button (click)="start.toggle()" class="menu-btn">
+        <md-icon class="md-24" *ngIf="!start.opened">arrow_forward</md-icon>
+        <md-icon class="md-24" *ngIf="start.opened">arrow_back</md-icon>
+      </button>
       <span id="header-title"></span>
       <span class="remaining-space"></span>
     </md-toolbar>
