--- a/frontEnd/src/app/users-list/users-list.component.html
+++ b/frontEnd/src/app/users-list/users-list.component.html
@@ -33,12 +33,11 @@
             Lock
         </template>
         <template let-user="rowData" pTemplate="body">
-            <!--<button *ngIf="user.enable"  type="button" pButton (click)="lock(user.idUser, dt)" icon="fa-lock"></button>
-            <button *ngIf="!user.enable"  type="button" pButton (click)="unlock(user.idUser)" icon="fa-unlock"></button>-->
             <md-slide-toggle [checked]="!user.enable" 
                             (change)="changeState($event, user)"
                             style="display: inline-block"
-                            color="primary">
+                            color="primary"
+                            *ngIf="user.idUser != auth.userProfile.idUser" >
             </md-slide-toggle>
         </template>
     </p-column>
