--- a/frontEnd/src/app/user/user.component.html
+++ b/frontEnd/src/app/user/user.component.html
@@ -20,12 +20,12 @@
   </md-toolbar>
   <md-sidenav class="md-sidenav-left" #start mode="over">
     <md-card class="user-card">
-      <md-card-header *ngIf="auth.userProfile">
+      <md-card-header *ngIf="auth.authenticated()">
         <img md-card-avatar [src]="auth.userProfile.picture">
         <md-card-title class="username-text">{{auth.userProfile.firstName}} {{auth.userProfile.lastName}}</md-card-title>
         <md-card-subtitle class="email-text">{{auth.userProfile.email}}</md-card-subtitle>
       </md-card-header>
-      <md-card-header *ngIf="!auth.userProfile">
+      <md-card-header *ngIf="!auth.authenticated()">
         <img md-card-avatar src="assets/images/logo.png">
         <md-card-title class="username-text">anonymous</md-card-title>
         <md-card-subtitle class="email-text">anonymous@gmail.com</md-card-subtitle>
