fix callback url and social login

--- a/frontEnd/src/app/user/user.component.html
+++ b/frontEnd/src/app/user/user.component.html
@@ -25,8 +25,8 @@
     <md-card class="user-card">
       <md-card-header *ngIf="auth.authenticated() && auth.userProfile">
         <img md-card-avatar [src]="auth.userProfile.picture">
-        <md-card-title class="username-text">{{auth.userProfile.firstName}} {{auth.userProfile.lastName}}</md-card-title>
-        <md-card-subtitle class="email-text">{{auth.userProfile.email}}</md-card-subtitle>
+        <md-card-title class="username-text">{{auth.userProfile.firstName || auth.userProfile.name}} {{auth.userProfile.lastName}}</md-card-title>
+        <md-card-subtitle class="email-text">{{auth.userProfile.email || auth.userProfile.gender}}</md-card-subtitle>
       </md-card-header>
       <md-card-header *ngIf="!auth.authenticated()">
         <img md-card-avatar src="assets/images/logo.png">
