--- a/frontEnd/src/app/slide-2/slide-2.component.html
+++ b/frontEnd/src/app/slide-2/slide-2.component.html
@@ -1,9 +1,15 @@
 <div class="header-grid" *ngIf="publishedArticles && publishedArticles.length > 2">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
         <div class="carousel-inner">
             <div [ngClass]="i === 0 ? 'item active' : 'item'" *ngFor="let article of publishedArticles | slice:0:3; let i = index">
                 <div class="header" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.85)), url(' + article.headerImagePath + ')'}"
-                [routerLink]="[article.idArticle]">
+                    [routerLink]="[article.idArticle]">
                     <div class="carousel-caption content">
                         <h3>{{article.articleHeaderTitle}}</h3>
                         <p class="description">{{article.articleHeaderDescription}}</p>
