--- a/frontEnd/src/app/slide-2/slide-2.component.scss
+++ b/frontEnd/src/app/slide-2/slide-2.component.scss
@@ -27,7 +27,7 @@
       margin: 0;
       color: white;
       position: absolute;
-      bottom: 0;
+      bottom: 20px;
       .description {
         color: #cecece;
         line-height: 1.5;
