--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -11,7 +11,7 @@
   </div>
   <!-- Thing to fix ...-->
   <div class="row">
-    <div class="col-md-4 col-sm-6" *ngFor="let article of publishedArticles | reverse | slice:3 | paginate: { itemsPerPage: 9, currentPage: p }" [routerLink]="[article.idArticle]">
+    <div class="col-md-4 col-sm-6" *ngFor="let article of publishedArticles | slice:3 | paginate: { itemsPerPage: 9, currentPage: p }" [routerLink]="[article.idArticle]">
       <md-card>
         <img md-card-image src={{article.headerImagePath}} class="articles-img">
         <md-card-content>
