--- a/frontEnd/src/app/slide-2/slide-2.component.html
+++ b/frontEnd/src/app/slide-2/slide-2.component.html
@@ -7,7 +7,7 @@
             <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
-            <div [ngClass]="i === 0 ? 'item active' : 'item'" *ngFor="let article of publishedArticles | reverse | slice:0:3; let i = index">
+            <div [ngClass]="i === 0 ? 'item active' : 'item'" *ngFor="let article of publishedArticles | slice:0:3; let i = index">
                 <div class="header" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.85)), url(' + article.headerImagePath + ')'}"
                     [routerLink]="[article.idArticle]">
                     <div class="carousel-caption content">
