--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -92,13 +92,15 @@
             <h2 md-line> {{comment.firstName + ' ' + comment.lastName}} </h2>
             <p md-line>
               {{getCommentPeriod(comment.time)}}
-                <span class="pull-right" *ngIf="comment.idUser == user.idUser"><button md-icon-button [md-menu-trigger-for]="menu">
-                 <md-icon>more_vert</md-icon>
-          </button></span>
+                <span class="pull-right" *ngIf="authService.authenticated() && authService.userProfile">
+                  <button md-icon-button [md-menu-trigger-for]="menu" *ngIf="comment.idUser == user.idUser || authService.userProfile.role == 1" >
+                    <md-icon>more_vert</md-icon>
+                  </button>
+                </span>
             </p>
           </md-list-item>
           <md-menu #menu="mdMenu">
-            <button md-menu-item (click)="modifyComment($event, comment); closeCommentMenu()"> Modify... </button>
+            <button md-menu-item *ngIf="comment.idUser == user.idUser" (click)="modifyComment($event, comment); closeCommentMenu()"> Modify... </button>
             <button md-menu-item (click)="removeComment($event, comment); closeCommentMenu()"> Remove... </button>
           </md-menu>
           <div class="comment-content">
