fix cli and material design

--- a/frontEnd/src/app/user/user.component.html
+++ b/frontEnd/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<md-sidenav-layout fullscreen>
+<md-sidenav-container fullscreen>
   <md-toolbar color="primary" style="height: 10vh;">
     <button md-icon-button (click)="start.toggle()" class="menu-btn">
       <md-icon class="md-24">menu</md-icon>
@@ -89,5 +89,5 @@
     </md-nav-list>
   </md-sidenav>
   <router-outlet></router-outlet>
-</md-sidenav-layout>
+</md-sidenav-container>
 
