--- a/frontEnd/src/app/article-detail/article-detail.component.scss
+++ b/frontEnd/src/app/article-detail/article-detail.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber';
-@include md-core(); // include all mixins
+@include mat-core(); // include all mixins
 .article-detail {
   header {
     padding: 0 !important;
