--- a/frontEnd/src/app/article/article.component.scss
+++ b/frontEnd/src/app/article/article.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber';
-@include md-core(); // include all mixins
+@include mat-core(); // include all mixins
 .articles-container {
   margin-top: 80px;
   .heading-img {
