--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="article" class="article-detail">
-  <header [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0.51), rgba(0, 0, 0, 0.85)), url(' + article.headerImagePath + ')'}">
+  <header [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0.51), rgba(0, 0, 0, 0.85)), url(' + article.header_image + ')'}">
     <div class="row" style="position: relative">
       <div class="col-md-10">
         <div class="content">
-          <h1>{{article.articleHeaderTitle}}</h1>
-          <h3 class="description">{{article.articleHeaderDescription}}</h3>
+          <h1>{{article.title}}</h1>
+          <h3 class="description">{{article.description}}</h3>
         </div>
       </div>
       <div class="author">
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="col-md-7 col-sm-7 col-xs-12 article-body">
-      <div [innerHTML]="article.articleContent" class="text-body"></div>
+      <div [innerHTML]="article.content" class="text-body"></div>
     </div>
     <div class="col-md-3 col-sm-3 col-xs-12 related-articles">
       <p><b>Related Stories</b></p>
@@ -32,10 +32,10 @@
         <div class="row related-article-row" *ngFor="let relatedArticle of relatedArticleList | slice:0:4; let i = index" [hidden]="relatedArticleList[i].idArticle == article.idArticle"
           style="margin-bottom: 20px" [routerLink]="[ '/news/', categoryName, relatedArticle.idArticle]">
           <div class="col-md-4 col-sm-12">
-            <img [src]="relatedArticle.headerImagePath" alt="img" style="width: 80px; height: 80px">
+            <img [src]="relatedArticle.header_image" alt="img" style="width: 80px; height: 80px">
           </div>
           <div class="col-md-8 col-sm-12">
-            <p>{{relatedArticle.articleHeaderTitle}}</p>
+            <p>{{relatedArticle.title}}</p>
             <!--<p>{{relatedArticle.date}}</p>-->
           </div>
         </div>
