--- a/frontEnd/src/app/slide-2/slide-2.component.html
+++ b/frontEnd/src/app/slide-2/slide-2.component.html
@@ -8,11 +8,11 @@
         </ol>
         <div class="carousel-inner">
             <div [ngClass]="i === 0 ? 'item active' : 'item'" *ngFor="let article of publishedArticles | slice:0:3; let i = index">
-                <div class="header" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.85)), url(' + article.headerImagePath + ')'}"
-                    [routerLink]="[article.idArticle]">
+                <div class="header" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.85)), url(' + article.header_image + ')'}"
+                    [routerLink]="[article._id]">
                     <div class="carousel-caption content">
-                        <h3>{{article.articleHeaderTitle}}</h3>
-                        <p class="description">{{article.articleHeaderDescription}}</p>
+                        <h3>{{article.title}}</h3>
+                        <p class="description">{{article.description}}</p>
                     </div>
                 </div>
             </div>
