admin user list and articles list

--- a/frontEnd/src/app/admin/admin.component.html
+++ b/frontEnd/src/app/admin/admin.component.html
@@ -1,16 +1,14 @@
 <md-sidenav-container fullscreen class="admin-container">
   <md-sidenav mode="side" opened="true" #start class="admin-sidenav">
     <md-toolbar color="primary">
-      <!--<button md-icon-button (click)="start.toggle()" class="menu-btn">
-        <md-icon class="md-24">menu</md-icon>
-      </button>-->
       <span [routerLink]="['/news/all']" id="header-title"> Frog Coffee News </span>
       <span class="remaining-space"></span>
     </md-toolbar>
+
     <md-card class="user-card">
       <md-card-header *ngIf="auth.authenticated() && auth.userProfile">
         <img md-card-avatar [src]="auth.userProfile.picture">
-        <md-card-title class="username-text">{{auth.userProfile.firstName || auth.userProfile.name}} {{auth.userProfile.lastName}}</md-card-title>
+        <md-card-title class="username-text">{{auth.userProfile.first_name || auth.userProfile.name}} {{auth.userProfile.last_name}}</md-card-title>
         <md-card-subtitle class="email-text">{{auth.userProfile.email || auth.userProfile.gender}}</md-card-subtitle>
       </md-card-header>
       <md-card-header *ngIf="!auth.authenticated()">
@@ -49,7 +47,7 @@
         </button>
         <a md-line (click)="auth.login()">Log In</a>
       </md-list-item>
-        <md-list-item *ngIf="auth.authenticated()">
+      <md-list-item *ngIf="auth.authenticated()">
         <button md-icon-button>
           <md-icon>vpn_key</md-icon>
         </button>
