--- a/frontEnd/src/app/article-detail/article-detail.component.scss
+++ b/frontEnd/src/app/article-detail/article-detail.component.scss
@@ -43,7 +43,7 @@
       .related-article-row {
         &:hover {
           cursor: pointer;
-          color: md-color($primary);
+          color: mat-color($primary);
         }
       }
     }
