--- a/frontEnd/src/app/articles-list/articles-list.component.scss
+++ b/frontEnd/src/app/articles-list/articles-list.component.scss
@@ -3,7 +3,7 @@
 .articles-list-container {
   margin: 40px;
   .ui-button {
-    background-color: md-color($primary)
+    background-color: mat-color($primary)
   }
 }
 
