--- a/frontEnd/src/app/pizza-dialog/pizza-dialog.component.html
+++ b/frontEnd/src/app/pizza-dialog/pizza-dialog.component.html
@@ -7,8 +7,8 @@
                maxlength="100"
                id="title"
                required
-               [(ngModel)]="articleDetail.articleHeaderTitle" 
-               name="articleHeaderTitle"
+               [(ngModel)]="articleDetail.title" 
+               name="title"
                placeholder="Title" 
                #title
                >
