--- a/frontEnd/src/app/admin/admin.component.scss
+++ b/frontEnd/src/app/admin/admin.component.scss
@@ -10,6 +10,15 @@ html, body, material-app, md-sidenav-container, .admin-content {
 .admin-container {
   .admin-sidenav {
     width: 250px;
+    box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);    
+    .user-card {
+      img {
+        width: 50px;
+        height: 50px;
+      }
+      // background-color: mat-color($primary);
+    }
+  
     md-nav-list {
       md-list-item {
         a {
@@ -20,7 +29,7 @@ html, body, material-app, md-sidenav-container, .admin-content {
           text-decoration: none
         }
         button {
-          color: md-color($primary);
+          color: mat-color($primary);
         }
       }
       md-list-item.md-list-item {
