--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -64,7 +64,7 @@
         <md-list-item>
           <img md-list-avatar src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png" alt="user-avatar">
           <md-input-container style=" width: 100%; padding-left: 16px;">
-            <textarea md-input placeholder="Leave a comment as {{user.firstName}} {{user.lastName}}" maxlength="300" required #characterCountComment
+            <textarea md-input placeholder="Leave a comment as {{user.first_name}} {{user.last_name}}" maxlength="300" required #characterCountComment
               rows="3" [(ngModel)]="commentContent"></textarea>
             <md-hint align="end">{{characterCountComment.value.length}} / 300</md-hint>
           </md-input-container>
@@ -89,18 +89,18 @@
         <div *ngFor="let comment of commentList">
           <md-list-item>
             <img md-list-avatar src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png" alt="user-avatar">
-            <h2 md-line> {{comment.firstName + ' ' + comment.lastName}} </h2>
+            <h2 md-line> {{comment.first_name + ' ' + comment.last_name}} </h2>
             <p md-line>
               {{getCommentPeriod(comment.time)}}
                 <span class="pull-right" *ngIf="authService.authenticated() && authService.userProfile">
-                  <button md-icon-button [md-menu-trigger-for]="menu" *ngIf="comment.idUser == user.idUser || authService.userProfile.role == 1" >
+                  <button md-icon-button [md-menu-trigger-for]="menu" *ngIf="comment._id == user._id || authService.userProfile.role == 1" >
                     <md-icon>more_vert</md-icon>
                   </button>
                 </span>
             </p>
           </md-list-item>
           <md-menu #menu="mdMenu">
-            <button md-menu-item *ngIf="comment.idUser == user.idUser" (click)="modifyComment($event, comment); closeCommentMenu()"> Modify... </button>
+            <button md-menu-item *ngIf="comment._id == user._id" (click)="modifyComment($event, comment); closeCommentMenu()"> Modify... </button>
             <button md-menu-item (click)="removeComment($event, comment); closeCommentMenu()"> Remove... </button>
           </md-menu>
           <div class="comment-content">
