--- a/frontEnd/src/app/users-list/users-list.component.html
+++ b/frontEnd/src/app/users-list/users-list.component.html
@@ -23,8 +23,8 @@
               #dt
               *ngIf="visible" >
     <header>Users List</header>
-    <p-column field="firstName" header="First name" [sortable]="true"></p-column>
-    <p-column field="lastName" header="Last name" [sortable]="true"></p-column>
+    <p-column field="first_name" header="First name" [sortable]="true"></p-column>
+    <p-column field="last_name" header="Last name" [sortable]="true"></p-column>
     <p-column field="email" header="Email" [sortable]="true"></p-column>
     <p-column field="phone" header="Phone" [sortable]="true"></p-column>
     <p-column field="role" header="Role" [sortable]="true"></p-column>
@@ -37,7 +37,7 @@
                             (change)="changeState($event, user)"
                             style="display: inline-block"
                             color="primary"
-                            *ngIf="user.idUser != auth.userProfile.idUser && user.role != 1">
+                            *ngIf="user._id != auth.userProfile._id && user.role != 1">
             </md-slide-toggle>
         </template>
     </p-column>
